# auto-correct-raw-photos

./: .gitignore  README.md  pyproject.toml
rawtherapee_auto/: cli.py  processing.py
