[tool.poetry]
name = "auto-correct-raw-photos"
version = "0.1.0"
description = ""
authors = ["Ryan McKeown <ryanmckeown@mail4me.com>"]
readme = "README.md"
packages = [{include = "auto_correct_raw_photos"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
